
Apache Sanselan Release Notes 
-----------------------------

Apache Sanselan is a pure-Java image library for reading and writing a variety of image formats.

See the project site for details and sample code.

http://incubator.apache.org/sanselan/site/index.html


Version History:
----------------

Release 0.95
------------

 * Added RELEASE_NOTES file (this file).
 * Added Apache license header to bin.xml and src.xml Maven assembly descriptors.
 * Added Javadocs to the binary distribution
 

Release 0.94
------------

First Apache release of Sanselan

Fixed bugs:
-----------
 * Can't convert PNG image to GIF image
    The PNG reader wasn't handling the 16-bit mode 4 PNGs properly. 
    The PNG reader wasn't gamma-correcting non-palette values properly in PNGs.
	see: https://issues.apache.org/jira/browse/SANSELAN-5